--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+
 #root {
   width: 100vw;
   height: 100vh;
+  font-family: "DM Sans", sans-serif;
 }
 
 body {
